syntax = "proto3";

package billing;

// Billing Service Definition
service BillingService {
  // Get user balance
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  
  // Update user balance
  rpc UpdateBalance(UpdateBalanceRequest) returns (UpdateBalanceResponse);
  
  // Create billing transaction
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  
  // Get transaction history
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse);
  
  // Calculate cost for usage
  rpc CalculateCost(CalculateCostRequest) returns (CalculateCostResponse);
  
  // Process payment
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

// Request/Response Messages
message GetBalanceRequest {
  string user_id = 1;
}

message GetBalanceResponse {
  bool success = 1;
  string message = 2;
  UserBalance balance = 3;
}

message UpdateBalanceRequest {
  string user_id = 1;
  double amount = 2;
  string operation = 3; // "add", "subtract", "set"
  string description = 4;
}

message UpdateBalanceResponse {
  bool success = 1;
  string message = 2;
  UserBalance balance = 3;
}

message CreateTransactionRequest {
  string user_id = 1;
  string type = 2; // "debit", "credit"
  double amount = 3;
  string description = 4;
  string provider = 5;
  map<string, string> metadata = 6;
}

message CreateTransactionResponse {
  bool success = 1;
  string message = 2;
  BillingTransaction transaction = 3;
}

message GetTransactionHistoryRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string start_date = 4;
  string end_date = 5;
}

message GetTransactionHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated BillingTransaction transactions = 3;
  PaginationInfo pagination = 4;
}

message CalculateCostRequest {
  string user_id = 1;
  string provider = 2;
  int32 input_tokens = 3;
  int32 output_tokens = 4;
  string model = 5;
}

message CalculateCostResponse {
  bool success = 1;
  string message = 2;
  CostCalculation cost = 3;
}

message ProcessPaymentRequest {
  string user_id = 1;
  double amount = 2;
  string payment_method = 3;
  string description = 4;
}

message ProcessPaymentResponse {
  bool success = 1;
  string message = 2;
  BillingTransaction transaction = 3;
}

// Data Types
message UserBalance {
  string user_id = 1;
  double balance = 2;
  string currency = 3;
  string updated_at = 4;
}

message BillingTransaction {
  string id = 1;
  string user_id = 2;
  string type = 3;
  double amount = 4;
  string description = 5;
  string provider = 6;
  string status = 7;
  string created_at = 8;
  map<string, string> metadata = 9;
}

message CostCalculation {
  string provider = 1;
  string model = 2;
  int32 input_tokens = 3;
  int32 output_tokens = 4;
  double input_cost = 5;
  double output_cost = 6;
  double total_cost = 7;
  string currency = 8;
}

message PaginationInfo {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
}
