const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

// ะะฐะณััะถะฐะตะผ proto ัะฐะนะปั
const authProto = protoLoader.loadSync('services/auth-service/proto/auth.proto', {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const billingProto = protoLoader.loadSync('services/billing-service/proto/billing.proto', {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const orchestratorProto = protoLoader.loadSync('services/provider-orchestrator/proto/orchestrator.proto', {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const proxyProto = protoLoader.loadSync('services/proxy-service/proto/proxy.proto', {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

// ะกะพะทะดะฐะตะผ ะพะฟัะตะดะตะปะตะฝะธั ัะตัะฒะธัะพะฒ
const authService = grpc.loadPackageDefinition(authProto).auth;
const billingService = grpc.loadPackageDefinition(billingProto).billing;
const orchestratorService = grpc.loadPackageDefinition(orchestratorProto).orchestrator;
const proxyService = grpc.loadPackageDefinition(proxyProto).proxy;

// ะกะพะทะดะฐะตะผ ะบะปะธะตะฝัั
const authClient = new authService.AuthService('localhost:50051', grpc.credentials.createInsecure());
const billingClient = new billingService.BillingService('localhost:50052', grpc.credentials.createInsecure());
const orchestratorClient = new orchestratorService.ProviderOrchestratorService('localhost:50054', grpc.credentials.createInsecure());
const proxyClient = new proxyService.ProxyService('localhost:50055', grpc.credentials.createInsecure());

console.log('๐ ะขะตััะธัะพะฒะฐะฝะธะต gRPC ัะตัะฒะธัะพะฒ...\n');

// ะขะตัั 1: Auth Service
console.log('1๏ธโฃ ะขะตััะธััะตะผ Auth Service (ะฟะพัั 50051)...');
authClient.GetUser({ email: 'test@example.com' }, (error, response) => {
  if (error) {
    console.log('   โ Auth Service:', error.message);
  } else {
    console.log('   โ Auth Service:', response);
  }
});

// ะขะตัั 2: Billing Service
console.log('2๏ธโฃ ะขะตััะธััะตะผ Billing Service (ะฟะพัั 50052)...');
billingClient.GetBalance({ user_id: 'test-user' }, (error, response) => {
  if (error) {
    console.log('   โ Billing Service:', error.message);
  } else {
    console.log('   โ Billing Service:', response);
  }
});

// ะขะตัั 3: Provider Orchestrator
console.log('3๏ธโฃ ะขะตััะธััะตะผ Provider Orchestrator (ะฟะพัั 50054)...');
orchestratorClient.GetProviderStatus({ provider_id: 'openai' }, (error, response) => {
  if (error) {
    console.log('   โ Provider Orchestrator:', error.message);
  } else {
    console.log('   โ Provider Orchestrator:', response);
  }
});

// ะขะตัั 4: Proxy Service
console.log('4๏ธโฃ ะขะตััะธััะตะผ Proxy Service (ะฟะพัั 50055)...');
proxyClient.ProxyRequest({ user_id: 'test-user', provider: 'openai', model: 'gpt-4', prompt: 'Hello' }, (error, response) => {
  if (error) {
    console.log('   โ Proxy Service:', error.message);
  } else {
    console.log('   โ Proxy Service:', response);
  }
});

// ะะดะตะผ ะทะฐะฒะตััะตะฝะธั ะฒัะตั ัะตััะพะฒ
setTimeout(() => {
  console.log('\n๐ ะขะตััะธัะพะฒะฐะฝะธะต ะทะฐะฒะตััะตะฝะพ!');
  process.exit(0);
}, 3000);
